refactor: change file name.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       controls
       playsinline
     >
-      <source src="samples/eagle-360.mp4" type="video/mp4" />
+      <source src="samples/index.mp4" type="video/mp4" />
     </video>
     <script src="node_modules/video.js/dist/video.min.js"></script>
     <script src="node_modules/videojs-vr/dist/videojs-vr.min.js"></script>
